- fixed SEE-572: Dock icon badge indicating invitations   the dock icon badge now reflects all pending users and pending invitations

--- a/.gitattributes
+++ b/.gitattributes
@@ -1157,6 +1157,8 @@ subethaedit/artwork/HomeFolderIcon.tiff -text
 subethaedit/artwork/Internet.tiff -text
 subethaedit/artwork/InternetResume.tiff -text
 subethaedit/artwork/InternetStop.tiff -text
+subethaedit/artwork/InvitationBadge1-2.tiff -text
+subethaedit/artwork/InvitationBadge3.tiff -text
 subethaedit/artwork/LibraryFolderIcon.tiff -text
 subethaedit/artwork/Mode.icns -text
 subethaedit/artwork/NamedLogo2.tiff -text
