Fixed [SEE-497]: Opening hidden files Using internal API to get this functionality. Internal API is available in 10.3 and 10.4.
* NSSavePanelTCMAdditions.[h|m]
  Encapsulates access to internal API.

* DocumentController.[h|m]
* PlainTextDocument.[h|m]
  Added outlets, actions and setup for the 'Show hidden files' option. The
  option is sticky just like the 'Go into bundles' option.

* English.lproj/SavePanelAccessory.nib
* English.lproj/OpenPanelAccessory.nib
  Added a checkbox for the 'Show hidden files' option.

* SubEthaEdit.xcodeproj
  Added NSSavePanelTCMAdditions to the project.

--- a/.gitattributes
+++ b/.gitattributes
@@ -556,6 +556,8 @@ subethaedit/NSColorTCMAdditions.h -text
 subethaedit/NSColorTCMAdditions.m -text
 subethaedit/NSImageTCMAdditions.h -text
 subethaedit/NSImageTCMAdditions.m -text
+subethaedit/NSSavePanelTCMAdditions.h -text
+subethaedit/NSSavePanelTCMAdditions.m -text
 subethaedit/NSStringSEEAdditions.h -text
 subethaedit/NSStringSEEAdditions.m -text
 subethaedit/ODBEditorSuite.h -text
