--- a/.gitattributes
+++ b/.gitattributes
@@ -1127,6 +1127,8 @@ subethaedit/TextFieldCell.h -text
 subethaedit/TextFieldCell.m -text
 subethaedit/TextOperation.h -text
 subethaedit/TextOperation.m -text
+subethaedit/TextSelection.h -text
+subethaedit/TextSelection.m -text
 subethaedit/TextStorage.h -text
 subethaedit/TextStorage.m -text
 subethaedit/TextView.h -text
