- started with SEE-978:Add named Applescripts to mode definitions   what works: the objective c mode is the example   apple scripts put in the Scripts folder of the resources folder of a mode bundle are loaded and put into the Mode menu, alphabetically for now, getting the auto keyequivalent of 1-9   scripts can be executed   script menu changes on mode change and on window change
  whats left to do:
  - read the scripts.xml for order, naming and shortcut setting
  - enable custom toolbars
  - put the menus somewhre into the bottom quickbar
  - better error reporting (it is nslogged now)

--- a/.gitattributes
+++ b/.gitattributes
@@ -468,7 +468,13 @@ subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/Localizable.
 subethaedit/Modes/Objective-C.mode/Contents/Resources/German.lproj/InfoPlist.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/German.lproj/Localizable.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts.xml -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Compile.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Counterpart.scpt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/Scripts/Open[!!-~]Terminal[!!-~]in[!!-~]Enclosing[!!-~]Folder.scpt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarIcons/Build.tiff -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/ToolbarIcons/Terminal.png -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/AutocompleteAdditions.txt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt -text
