- added scriptwrapper class to wrap scripts and scriptsettings - added reveal in finder on option-click

--- a/.gitattributes
+++ b/.gitattributes
@@ -1026,6 +1026,8 @@ subethaedit/RendezvousBrowserController.h -text
 subethaedit/RendezvousBrowserController.m -text
 subethaedit/SaturationToColorValueTransformer.h -text
 subethaedit/SaturationToColorValueTransformer.m -text
+subethaedit/ScriptWrapper.h -text
+subethaedit/ScriptWrapper.m -text
 subethaedit/Scripts/Open[!!-~]Terminal[!!-~]Here.scpt -text
 subethaedit/Scripts/Save[!!-~]front[!!-~]document.scpt -text
 subethaedit/SelectionOperation.h -text
