--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+subethaedit/SubEthaEdit.xcodeproj/*.mode1
 subethaedit/SubEthaEdit.xcodeproj/*.mode2
 subethaedit/SubEthaEdit.xcodeproj/*.pbxuser
 subethaedit/SubEthaEditScripting.r
