Checking in support for mode detection based on filename (SEE-055) and content (SEE-329). Content detection is not yet enabled for piped data.

--- a/subethaedit/Modes/Lua.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Lua.mode/Contents/Info.plist
@@ -24,5 +24,10 @@ http://www.codingmonkeys.de</string>
 	   <string>lua</string>
 	   <string>LUA</string>
 	</array>
+	<key>TCMModeRegex</key>
+	<array>
+	   <string>\A#!/usr(/local)?/bin/lua</string>
+	   <string>\A#!/usr/bin/env lua</string>
+	</array>
 </dict>
 </plist>
