--- a/subethaedit/Modes/Ruby.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Ruby.mode/Contents/Info.plist
@@ -33,5 +33,14 @@ Based on the original Coding Monkey's code</string>
 	   <string>RHTML</string>
 	   <string>RXML</string>
 	</array>
+	<key>TCMModeFilenames</key>
+	<array>
+	   <string>Rakefile</string>
+	</array>
+	<key>TCMModeRegex</key>
+	<array>
+	   <string>\A#!/usr/bin/ruby</string>
+	   <string>\A#!/usr/bin/env ruby</string>
+	</array>
 </dict>
 </plist>
