- added my check syntax script - will probably land in each mode that can be checked (btw: make new text document with properties {name:"Something"} displays that file as belonging to the home of the usesr (e.g.: /Users/dwagner/Throwback)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1029,6 +1029,7 @@ subethaedit/SaturationToColorValueTransformer.h -text
 subethaedit/SaturationToColorValueTransformer.m -text
 subethaedit/ScriptWrapper.h -text
 subethaedit/ScriptWrapper.m -text
+subethaedit/Scripts/Check[!!-~]Syntax.scpt -text
 subethaedit/Scripts/Open[!!-~]Terminal[!!-~]Here.scpt -text
 subethaedit/Scripts/Save[!!-~]front[!!-~]document.scpt -text
 subethaedit/SelectionOperation.h -text
