Adding "configure" to TCMModeFilenames of bash.mode

--- a/subethaedit/Modes/bash.mode/Contents/Info.plist
+++ b/subethaedit/Modes/bash.mode/Contents/Info.plist
@@ -30,6 +30,7 @@ http://www.codingmonkeys.de</string>
 	<array>
 	   <string>.bash_profile</string>
 	   <string>.bashrc</string>
+	   <string>configure</string>
 	</array>
 	<key>TCMModeRegex</key>
 	<array>
