* SubEthaEdit.sdef   Is now 10.4 compatible and can actually be used by Cocoa Scripting. Still   misses proper support for selection and text.
* Info.plist
  Added key for referencing the sdef.

* DocumentController.m
  Fixed bug where URLs in the direct parameter array where not converted to 
  file paths.

* SubEthaEdit-Panther.sdef
  Old sdef for 10.3 compatibility.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1047,6 +1047,7 @@ subethaedit/SplitView.h -text
 subethaedit/SplitView.m -text
 subethaedit/StylePreferences.h -text
 subethaedit/StylePreferences.m -text
+subethaedit/SubEthaEdit-Panther.sdef -text
 subethaedit/SubEthaEdit.sdef -text
 subethaedit/SubEthaEdit.xcodeproj/project.pbxproj -text
 subethaedit/SubEthaEditHelperTool.m -text
