--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -254,6 +254,8 @@
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
+    <key>OSAScriptingDefinition</key>
+    <string>SubEthaEdit.sdef</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2003-2006, TheCodingMonkeys</string>
 	<key>NSMainNibFile</key>
