adding scriptTerminology and scriptSuit to extensions for XML.mode

--- a/subethaedit/Modes/XML.mode/Contents/Info.plist
+++ b/subethaedit/Modes/XML.mode/Contents/Info.plist
@@ -39,6 +39,8 @@ http://www.codingmonkeys.de</string>
 	   <string>RDF</string>
 	   <string>SEESTYLE</string>
 	   <string>SDEF</string>
+	   <string>scriptSuite</string>
+	   <string>scriptTerminology</string>
 	</array>
 </dict>
 </plist>
